# MatplotLibAPI

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SUGGESTIONS.md  __init__.py  _requirements.txt  nw.csv  pyproject.toml  requirements-dev.txt  requirements.py  requirements.txt  scratch.py  setup.py  ts.csv
.github/: dependabot.yml
.github/workflows/: ci.yml  python-publish.yml
MatPlotLib/: Pivot.py  Table.py  Utils.py
MatplotLibAPI/: Area.py  Bar.py  BoxViolin.py  Bubble.py  Composite.py  Heatmap.py  Histogram.py  Line.py  Network.py  Pie.py  Pivot.py  Sankey.py  Style.py  StyleTemplate.py  Sunburst.py  Table.py  TimeSeries.py  Timeserie.py  Treemap.py  Utils.py  Waffle.py  Wordcloud.py  __init__.py  _typing.py  _visualization_utils.py  accessor.py  pdAccessor.py
MatplotLibAPI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MatplotLibAPI/tests/: test_pivot.py
examples/: __init__.py  bubble.py  network.py  sample_data.py
scripts/: generate_sample_data.py  pre_commit.sh
src/: Bubble.py  Network.py  Timeserie.py
src/MatplotLibAPI/: __init__.py  accessor.py  area.py  bar.py  base_plot.py  box_violin.py  bubble.py  composite.py  heatmap.py  histogram.py  mcp_server.py  network.py  pie.py  pivot.py  sankey.py  style_template.py  sunburst.py  table.py  timeserie.py  treemap.py  types.py  typing.py  utils.py  waffle.py  word_cloud.py
src/MatplotLibAPI/mcp/: __init__.py  metadata.py  renderers.py
src/MatplotLibAPI/network/: __init__.py  constants.py  core.py  plot.py  scaling.py
tests/: __init__.py  conftest.py  test_area.py  test_bar.py  test_box_violin.py  test_bubble.py  test_composite.py  test_dependencies.py  test_heatmap.py  test_histogram.py  test_mcp_server.py  test_network.py  test_network_preprocessing.py  test_pie.py  test_pivot.py  test_plots.py  test_sankey.py  test_smoke.py  test_style_template.py  test_sunburst.py  test_table.py  test_timeseries.py  test_treemap.py  test_waffle.py  test_wordcloud.py
