[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "MatplotLibAPI"
version = "3.2.16"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "matplotlib",
    "networkx",
    "plotly",
    "seaborn",
    "scikit-learn",
    "kaleido",
    "nbformat",
    "numpy",
    "wordcloud",
]

[project.optional-dependencies]
dev = [
    "pydocstyle",
    "pytest-pydocstyle",
    "pyright",
    "black",
    "pytest",
    "pytest-cov",
    "tomli",
]

[tool.hatch.build.targets.wheel]
packages = ["MatplotLibAPI"]
