[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "MatplotLibAPI"
version = "4.0.2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "matplotlib",
    "networkx",
    "plotly",
    "seaborn",
    "scikit-learn",
    "kaleido",
    "nbformat",
    "numpy",
    "wordcloud",
]

[project.optional-dependencies]
dev = [
    "pydocstyle",
    "pytest-pydocstyle",
    "pyright",
    "black",
    "pytest",
    "pytest-cov",
    "tomli",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
matplotlibapi-mcp = "MatplotLibAPI.mcp_server:main"


[tool.hatch.build.targets.wheel]
packages = ["src/MatplotLibAPI"]

[tool.pyright]
extraPaths = ["src"]

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
